objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Field_Testing__c</fullName>
        <label>Custom_Field_Testing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test_Custom_Field1__c</fullName>
        <description>test change for field</description>
        <inlineHelpText>Testing custom field</inlineHelpText>
        <label>Test_Custom_Field1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>